syntax = "proto3";
package gen;

option go_package = "internal/adapter/grpc-api/gen";

message OHLC {
	double open			= 1;
	double high			= 2;
	double low			= 3;
	double close		= 4;
	int64 timestampMs	= 5;
}

service OHLCService {
	rpc SubscribeToOHLCStream(SubscribeToOHLCStreamRequest) returns (stream OHLC) {}
}

message SubscribeToOHLCStreamRequest {
	string symbol			= 1;
	string timeframeName	= 2; // e.g., "1m", "5m", "1h"
}
